# napali

./: .envrc  Cargo.nix  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  sweep.yaml  vhs.tape
.cargo/: config.toml
.config/: config.json5  nextest.toml
.github/workflows/: ci.yml  docker-publish-tagged.yml  flakehub-publish-tagged.yml  vhs.yml
src/: app.rs  cli.rs  components.rs  config.rs  main.rs  router.rs  tui.rs  utils.rs
src/action/: mod.rs  mode.rs  overlay.rs  scene.rs  view.rs
src/components/: base.rs  usage_info.rs
src/components/about/: about_text.rs  email_prompt.rs  layers.rs  mod.rs
src/components/data/: layers.rs  mod.rs  widgets.rs
src/components/home/: about.rs  email_prompt.rs  layers.rs  mod.rs
src/components/internals/: app_fps.rs  buffers.rs  counters.rs  layers.rs  mod.rs  render_fps.rs  state_display.rs  stats_display.rs  trail.rs
src/components/session/: jobs.rs  layers.rs  mod.rs  prompt.rs  widgets.rs
src/irx_client/: api.rs  mod.rs
