[package]
name = "napali"
version = "0.1.1"
edition = "2021"
description = "TUI interface for Integrated Reasoning's accelerated solver API"
include = ["src/**/*", "tests/**/*", "Cargo.*", "README.md"]
authors = ["David Cox <david@integrated-reasoning.com>"]
homepage = "https://integrated-reasoning.com/"
repository = "https://github.com/integrated-reasoning/napali/"
documentation = "https://docs.rs/napali"
readme = "README.md"
license = "MIT"
keywords = ["optimization", "integer-programming", "TUI", "solver", "math"]
categories = ["mathematics", "algorithms", "science", "visualization", "api-bindings"]

[features]
default = []
unstable = []

[dependencies]
better-panic = "0.3.0"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.2"
config = "0.13.3"
console-subscriber = "0.2.0"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
dirs = "5.0.1"
email_address = "0.2.4"
futures = "0.3.29"
human-panic = "1.2.2"
itertools = "0.12.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.149"
log = "0.4.20"
mps = { version = "0.1.0", features = [] }
pretty_assertions = "1.4.0"
ratatui = { version = "0.25.0", features = ["serde", "macros"] }
regress = "0.7.1"
reqwest = { version = "0.11", features = ["json"] }
ringbuffer = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.111"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
tokio = { version = "1.33.0", features = ["full", "tracing"] }
tokio-util = "0.7.9"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
tui-textarea = { version = "0.4.0", features = ["crossterm", "ratatui", "search"] }
tui-tree-widget = "0.16.0"
url = "2.4.1"

[patch.crates-io]
# work-around for https://github.com/tkaitchuck/aHash/issues/195
ahash = { git = "https://github.com/tkaitchuck/aHash", rev = "v0.8.5" }

[profile.release]
opt-level = 3
debug = false
strip = 'symbols'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
